Fix error in image not showing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,7 +125,7 @@ header {
 }
 
 .logo {
-    background-image: url(/assets/images/profile-picture.png);
+    background-image: url(..\assets\images\profile-picture.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
